<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/sharedimage"
            android:scaleType="centerCrop"
            android:src="@drawable/littlefractal"
            android:transitionName="@string/transitionName" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_first_name_details"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/placeholder_firstname"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/txt_last_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"

                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/placeholder_lastname"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="70dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/placeholder_address"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="70dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/placeholder_phone"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>